tests/baselines/reference/constDeclarations-useBeforeDefinition2.errors.txt
error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.
file1.ts(1,1): error TS2448: Block-scoped variable 'c' used before its declaration.


!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
==== file1.ts (1 errors) ====
    c;
    ~
!!! error TS2448: Block-scoped variable 'c' used before its declaration.
!!! related TS2728 file2.ts:1:7: 'c' is declared here.
    
==== file2.ts (0 errors) ====
    const c = 0;